feat: cloud add resourceGroup and account column
